<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navi Interactive Companion</string>
    <string name="action_settings">Settings</string>
    <string name="dev_name">Might as Well Development</string>
    <string name="dev_name_condensed">&amp;MaW&amp;</string>
    <string name="welcome_message">Hey! Listen!</string>
    <string name="navi_description">Meet Navi your interactive companion.  Navi is here to make your phone use easier in more than one way so go ahead and make your day easier</string>
    <string name="tutorial">How To Use Navi</string>
    <string name="navi">Navi</string>
    <string name="toggle_navi_off">Off</string>
    <string name="toggle_navi_on">On</string>
    <string name="help">Help</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="navi_color_text">Navi Color</string>
    <string name="title_activity_hey_look">HeyLookActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
